modified input component and fixed input overflow

--- a/src/components/atoms/input/input.module.scss
+++ b/src/components/atoms/input/input.module.scss
@@ -7,6 +7,7 @@
     width: 100%;
     border-bottom: 2px solid #e4e6ed;
     font-size: var(--font-size-m);
+    overflow: hidden;
   }
 }
 
@@ -28,6 +29,7 @@
     background: #fff;
     border-radius: 8px;
     position: relative;
+    overflow: hidden;
 
     &::placeholder {
       color: var(--color-gray-03);
@@ -70,4 +72,8 @@
 
 .errorsContainer {
   transition: height 300ms 0s;
+}
+
+.borderInput {
+  border-color: var(--color-primary-01);
 }
